docs/1.1/_sources/api/gammapy.maps.LabelMapAxis.rst.txt
LabelMapAxis
============

.. currentmodule:: gammapy.maps

.. autoclass:: LabelMapAxis
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~LabelMapAxis.append
      ~LabelMapAxis.as_plot_center
      ~LabelMapAxis.as_plot_edges
      ~LabelMapAxis.as_plot_labels
      ~LabelMapAxis.as_plot_xerr
      ~LabelMapAxis.bin_width
      ~LabelMapAxis.center
      ~LabelMapAxis.edges
      ~LabelMapAxis.edges_max
      ~LabelMapAxis.edges_min
      ~LabelMapAxis.name
      ~LabelMapAxis.nbin
      ~LabelMapAxis.node_type
      ~LabelMapAxis.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~LabelMapAxis.assert_name
      ~LabelMapAxis.concatenate
      ~LabelMapAxis.coord_to_idx
      ~LabelMapAxis.coord_to_pix
      ~LabelMapAxis.copy
      ~LabelMapAxis.downsample
      ~LabelMapAxis.format_plot_xaxis
      ~LabelMapAxis.from_stack
      ~LabelMapAxis.from_table
      ~LabelMapAxis.is_allclose
      ~LabelMapAxis.pad
      ~LabelMapAxis.pix_to_coord
      ~LabelMapAxis.pix_to_idx
      ~LabelMapAxis.resample
      ~LabelMapAxis.slice
      ~LabelMapAxis.squash
      ~LabelMapAxis.to_header
      ~LabelMapAxis.upsample

   .. rubric:: Attributes Documentation

   .. autoattribute:: append
   .. autoattribute:: as_plot_center
   .. autoattribute:: as_plot_edges
   .. autoattribute:: as_plot_labels
   .. autoattribute:: as_plot_xerr
   .. autoattribute:: bin_width
   .. autoattribute:: center
   .. autoattribute:: edges
   .. autoattribute:: edges_max
   .. autoattribute:: edges_min
   .. autoattribute:: name
   .. autoattribute:: nbin
   .. autoattribute:: node_type
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: assert_name
   .. automethod:: concatenate
   .. automethod:: coord_to_idx
   .. automethod:: coord_to_pix
   .. automethod:: copy
   .. automethod:: downsample
   .. automethod:: format_plot_xaxis
   .. automethod:: from_stack
   .. automethod:: from_table
   .. automethod:: is_allclose
   .. automethod:: pad
   .. automethod:: pix_to_coord
   .. automethod:: pix_to_idx
   .. automethod:: resample
   .. automethod:: slice
   .. automethod:: squash
   .. automethod:: to_header
   .. automethod:: upsample
